tests/ui/pattern/never_patterns.stderr
error[E0408]: variable `_x` is not bound in all patterns
  --> $DIR/never_patterns.rs:12:19
   |
LL |     let (Ok(_x) | Err(!)) = &res;
   |             --    ^^^^^^ pattern doesn't bind `_x`
   |             |
   |             variable not in all patterns

error[E0408]: variable `_x` is not bound in all patterns
  --> $DIR/never_patterns.rs:14:19
   |
LL |     let (Ok(_x) | Err(&!)) = res.as_ref();
   |             --    ^^^^^^^ pattern doesn't bind `_x`
   |             |
   |             variable not in all patterns

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0408`.
